err/schmenkins.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/croniter'...
Listing './lib/python3.5/site-packages/croniter/tests'...
Listing './lib/python3.5/site-packages/croniter-0.3.20.egg-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/fasteners'...
Listing './lib/python3.5/site-packages/fasteners/tests'...
Listing './lib/python3.5/site-packages/fasteners-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/formic'...
Compiling './lib/python3.5/site-packages/formic/command.py'...
***   File "./lib/python3.5/site-packages/formic/command.py", line 199
    print """Ant Globs
=========

Apache Ant fileset is documented at the Apache Ant project:

* http://ant.apache.org/manual/dirtasks.html#patterns

Examples
--------

Ant Globs are like simple file globs (they use ? and * in the same way), but
include powerful ways for selecting directories. The examples below use the
Ant glob naming, so a leading slash represents the top of the search, *not* the
root of the file system.

    *.py
            Selects every matching file anywhere in the whole tree
                Matches /foo.py and /bar/foo.py
                but not /foo.pyc or /bar/foo.pyc/

    /*.py
            Selects every matching file in the root of the directory (but no
            deeper).

            Matches /foo.py but not /bar/foo.py

    /myapp/**
            Matches all files under /myapp and below.

    /myapp/**/__init__.py
            Matches all __init__.py files /myapp and below.

    dir1/__init__.py
            Selects every __init__.py in directory dir1. dir1
            directory can be anywhere in the directory tree

            Matches /dir1/file.py, /dir3/dir1/file.py and
            /dir3/dir2/dir1/file.py but not /dir1/another/__init__.py.

    **/dir1/__init__.py
            Same as above.

    /**/dir1/__init__.py
            Same as above.

    /myapp/**/dir1/__init__.py
            Selects every __init__.py in dir1 in the directory tree
            /myapp under the root.

            Matches /myapp/dir1/__init__.py and /myapp/dir2/dir1/__init__.py
            but not /myapp/file.txt and /dir1/file.txt

Default excludes
----------------

Ant FileSet (and Formic) has built-in patterns to screen out a lot of
development 'noise', such as hidden VCS files and directories. The full list is
at:

    * http://www.aviser.asia/formic/api.html#formic.formic.get_initial_default_excludes

Default excludes can be simply switched off on both the command line and the
API, for example::

    $ formic -i "*.py" -e "__init__.py" "**/*test*/" "test_*" --no-default-excludes
"""
                      
         

                                                           

                                                     

        
        

                                                                            
                                                                           
                                                                               
                        

        
                                                                  
                                               
                                                 

         
                                                                            
                    

                                               

             
                                                     

                         
                                                           

                    
                                                             
                                                           

                                                         
                                                                      

                       
                          

                        
                          

                              
                                                                   
                                  

                                                                            
                                                      

                
                

                                                                     
                                                                               
   

                                                                                       

                                                                            
                  

                                                                                   
  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/formic/test_formic.py'...
***   File "./lib/python3.5/site-packages/formic/test_formic.py", line 103
    print "find", directory, "-type f -name", pattern, ": found", lines, "files"
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/formic-0.9b8.egg-info'...
Listing './lib/python3.5/site-packages/jenkins'...
Listing './lib/python3.5/site-packages/jenkins_job_builder-2.0.0.dist-info'...
Listing './lib/python3.5/site-packages/jenkins_jobs'...
Listing './lib/python3.5/site-packages/jenkins_jobs/cli'...
Listing './lib/python3.5/site-packages/jenkins_jobs/cli/subcommand'...
Listing './lib/python3.5/site-packages/jenkins_jobs/modules'...
Listing './lib/python3.5/site-packages/jenkins_jobs/sphinx'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/monotonic-1.4.dist-info'...
Listing './lib/python3.5/site-packages/multi_key_dict-2.0.3.egg-info'...
Listing './lib/python3.5/site-packages/pbr'...
Listing './lib/python3.5/site-packages/pbr/cmd'...
Listing './lib/python3.5/site-packages/pbr/hooks'...
Listing './lib/python3.5/site-packages/pbr/tests'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/data_files'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc/source'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage/package_data'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/src'...
Listing './lib/python3.5/site-packages/pbr-3.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/python_jenkins-0.4.15.egg-info'...
Listing './lib/python3.5/site-packages/schmenkins'...
Compiling './lib/python3.5/site-packages/schmenkins/__init__.py'...
***   File "./lib/python3.5/site-packages/schmenkins/__init__.py", line 134
    except exceptions.SchmenkinsCommandFailed, e:
                                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/schmenkins/builders'...
Listing './lib/python3.5/site-packages/schmenkins/publishers'...
Listing './lib/python3.5/site-packages/schmenkins/scm'...
Listing './lib/python3.5/site-packages/schmenkins/tests'...
Listing './lib/python3.5/site-packages/schmenkins/triggers'...
Listing './lib/python3.5/site-packages/schmenkins-0.8.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/stevedore'...
Listing './lib/python3.5/site-packages/stevedore/example'...
Listing './lib/python3.5/site-packages/stevedore/example2'...
Listing './lib/python3.5/site-packages/stevedore/tests'...
Listing './lib/python3.5/site-packages/stevedore-1.28.0.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
